--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,11 @@
 {
-    "parser": "babel-eslint",
-    "extends": "airbnb-base",
-    "rules": {
-        "no-console": 0
-    }
+  "parser": "babel-eslint",
+  "extends": "airbnb-base",
+  "globals": {
+    "document": true
+  },
+  "rules": {
+    "no-console": 0,
+    "no-unused-vars": 0
+  }
 }
