--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
+    "glslify-deps": "^1.3.1",
     "parcel-bundler": "^1.8.1"
   }
 }
